--- a/src/styles/src/Mypage.scss
+++ b/src/styles/src/Mypage.scss
@@ -8,6 +8,7 @@
 
   h1{
     margin-top:120px;
+    margin-bottom: 40px;
     text-align: center;
     font-size:30px;
     color: $dark-gray;
@@ -29,18 +30,28 @@
       margin-top:100px;
       margin-left:40px;
       display: flex;
-  
       li{
+        display: flex;
         width:260px;
         height:90px;
         margin-left:50px;
         background-color:rgb(156, 156, 156);
         border-radius:15px;
+        // background-color: #d0a;
         img{
           width:42px;
           height:42px;
           margin-top:20px;
           margin-left:20px;
+        }
+        span {
+          width: auto;
+          height: 30px;
+          margin-top: 30px;
+          margin-left: 10px;
+          font-size: 18px;
+          font-weight: 500;          
+          color: #5b5b5b;
         }
       }
       .name{
@@ -54,17 +65,26 @@
       display: flex;
       margin-left:40px;
       li{
+        display: flex;
         width:260px;
         height:90px;
         margin-left:50px;
         background-color:rgb(156, 156, 156);
         border-radius:15px;
-
         img{
           width:42px;
           height:42px;
           margin-top:20px;
           margin-left:20px;
+        }
+        span {
+          width: auto;
+          height: 30px;
+          margin-top: 30px;
+          margin-left: 10px;
+          font-size: 18px;
+          font-weight: 500;
+          color: #5b5b5b;
         }
       }
 
