--- a/src/styles/src/SignUpSection.scss
+++ b/src/styles/src/SignUpSection.scss
@@ -3,32 +3,32 @@
 
 /* laptop & desktop */
 form {
-  padding-top:50px;
   width:570px;
-
+  
   .first_bundle,
   .second_bundle {
     li {
       input {
         text-indent: 10px;
         line-height: 20px;
-        // background-color: #ea1;
       }
       input::placeholder {
         color: #eaeaea;
         font-size: 15px;
-      }
-    }
+      }// input 
+    }// li
   }
+  
 
   .first_bundle{
+    margin-top: 40px;
     display: flex;
     li{
-      position: relative;
-      width:260px;
-      height:70px;
+      // position: relative;
+      width: 260px;
+      height: 70px;
       background-color:rgb(156, 156, 156);
-      border-radius:15px;
+      border-radius: 15px;
       img{
         margin-left:10px;
       }
@@ -38,7 +38,7 @@ form {
 
     }
     .Name_box{
-      position: relative;
+      // position: relative;
       margin-right:50px;
       input{
         position: absolute;
@@ -49,70 +49,50 @@ form {
         background-color:rgb(156, 156, 156)     
       }
       img{
-        margin-top:9px;
-        width:50px;
-        height:50px;
+        margin-top: 9px;
+        width: 50px;
+        height: 50px;
         }
       }
 
     .gender_box {
-      position: relative;
       display: flex;
       justify-content: space-between;
-      padding-top:10px;
-      // background-color: #fff;
-      .man_box {
-        margin-right: 10px;
-        // background-color: #1a3;
-      }
+      padding: 5px 35px 5px 25px;
       .man_box, 
       .woman_box {
         display: flex;
-        position: absolute;
-        width: 100px;
-        // background-color: #5a1;
+        align-items: center;
+        justify-content: space-between;
+        width: 90px;
         label {
-          // width: 100%;
-          // height: 100%;
-          margin: auto;
-          // background-color: #13a;
+          width: 0;
           img {
             width: 45px;
             height: 45px;
-            margin: auto;
-            // background-color: #81a;
-            
           }
         }// label
+        label:hover {
+          cursor: pointer;
+        }
         input {
-          width:30px;
-          height:30px;
+          width: 26px;
+          height: 26px;
+          margin-bottom: 5px;
         }// input
       }
-      .man_box{
-        left:20px;
-      }// .man_box
-      .woman_box{
-        left:120px;
-        input{
-          margin-left:-15px;
-        }
-        // img {}
-      }// .woman_box
     }// .gender_box
   }
 
   .second_bundle{
     display: block;
     position: relative;
-
     li{
       width:570px;
       height:70px;
       background-color:rgb(156, 156, 156);
       border-radius: 15px;
       margin-top: 20px;
-
     }
 
     input{
@@ -138,8 +118,6 @@ form {
         height:40px;
       }
     }
-
-  
   }
 
   .signup_button{
@@ -155,148 +133,55 @@ form {
     border-radius:15px;
     cursor: pointer;
     }
-    input:hover{
-      background-color:$dark-gray;
-      color: #fff;
-    }
   }
-
-
 }// form 
+
 
 
 /* mobile */
 @include mobile {
-  form {
-    padding-top:50px;
-    width:570px;
-    margin:0 auto;
-    // height:600px;
+  form {  
+    position: relative;
+    width: 350px;
+    height: 510px;
+    background-color: #eee;
 
     .first_bundle{
-      display: block;
-      li{
-        position: absolute;
-        margin-left:20px;
-        top:-50px;
-        width:300px;
-        height:60px;
-        margin-top: 20px;
-        background-color:rgb(156, 156, 156);
-        border-radius:15px;
-        img{
-          margin-left:10px;
-        }
-        input{
-          cursor: pointer;
-        }
+      margin-top: 0px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // background-color: #a03;
 
+      .Name_box,  
+      .gender_box {
+        width: 300px;
+        height: 60px;
+      }// li
+      .Name_box {
+        margin: 0;
+        margin-bottom: 20px;
+        }
+      .gender_box {
+        padding: 5px 45px 5px 30px;
       }
-      .Name_box{
-        position: relative;
-        margin-right:50px;
-        input{
-          position: absolute;
-          margin-top:22px;
-          margin-left:10px;  ; 
-          outline:none;
-          border:none;
-          background-color:rgb(156, 156, 156)     
-        }
-        img{
-          margin-top:6px;
-          width:50px;
-          height:50px;
-          }
-        }
-
-      .gender_box{
-        input{
-          width:30px;
-          height:30px;
-        }
-        .man_box{
-          position: absolute;
-          left:40px;
-          img{
-            width:47px;
-            height:47px;
-          }
-        }
-        .woman_box{
-          position: absolute;
-          left:140px;
-          input{
-            margin-left:-15px;
-          }
-          img{
-            width:45px;
-            height:45px;
-          }
-        }
-
-
-      }
-    
     }
 
     .second_bundle{
-      display: block;
-      position: relative;
-      margin-top:-45px;
-
-      li{
-        margin-left:20px;
-        width:300px;
-        height:60px;
-        background-color:rgb(156, 156, 156);
-        border-radius: 15px;
-        margin-top: 20px;
-
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      li {
+        width: 300px;
+        height: 60px;
       }
+      // .signup_tel_box{}
+    }// second_bundle
 
-      input{
-        position:absolute;
-        outline:none;
-        border:none;
-        background-color:rgb(156, 156, 156);
-        margin-top:23px;
-        margin-left:10px;
-        cursor: pointer;
-      }
-      img{
-        margin-top:10px;
-        margin-left:10px;
-        width:42px;
-        height:42px;
-      }
-      .signup_tel_box{
-        img{
-          margin-top:12px;
-          width:40px;
-          height:40px;
-        }
-      }
-    }
-
-    .signup_button{
+    .signup_button {
       position: absolute;
-      margin-top: 15px;
-      margin-left: 210px;
-      input{
-      width:100px;
-      height:50px;
-      outline:none;
-      border:none;
-      background-color:rgb(156, 156, 156);
-      font:20px "나눔고딕",sans-serif;
-      border-radius:15px;
-      cursor: pointer;
-      }
-      input:hover{
-        background-color:$dark-gray;
-        color: #fff;
-      }
+      bottom: 20px;
+      right: 35px;
     }
   }// form 
 }
@@ -305,131 +190,33 @@ form {
 /* tablet */
 @include tablet {
   form {
-    padding-top:50px;
     width:550px;
-    margin:0 auto;
 
     .first_bundle{
-      display: flex;
       margin-left: 10px;
-      li{
-        position: relative;
-        width:260px;
-        height:70px;
-        background-color:rgb(156, 156, 156);
-        border-radius:15px;
-        img{
-          margin-left:10px;
-        }
-        input{
+      // .Name_box {}
+      .gender_box {
+        label:hover {
           cursor: pointer;
         }
-
       }
-      .Name_box{
-        position: relative;
-        margin-right:50px;
-        input{
-          position: absolute;
-          margin-top:24px;
-          margin-left:10px;  ; 
-          outline:none;
-          border:none;
-          background-color:rgb(156, 156, 156)     
-        }
-        img{
-          margin-top:9px;
-          width:50px;
-          height:50px;
-          }
-        }
-
-      .gender_box{
-    
-        input{
-          width:30px;
-          height:30px;
-        }
-        .man_box{
-          position: absolute;
-          left:20px;
-          img{
-            width:47px;
-            height:47px;
-          }
-        }
-        .woman_box{
-          position: absolute;
-          left:120px;
-          input{
-            margin-left:-15px;
-          }
-          img{
-            width:45px;
-            height:45px;
-          }
-        }
-
-
-      }
-    
     }
 
     .second_bundle{
-      display: block;
-      position: relative;
-
       li{
-        width:540px;
-        height:70px;
-        background-color:rgb(156, 156, 156);
-        border-radius: 15px;
-        margin-top: 20px;
-        margin-left:10px;
+        width: 540px;
+        margin-left: 10px;
       }
-
       input{
-        position:absolute;
-        outline:none;
-        border:none;
-        background-color:rgb(156, 156, 156);
-        margin-top:25px;
-        margin-left:10px;
         cursor: pointer;
       }
-      img{
-        margin-top:10px;
-        margin-left:10px;
-        width:42px;
-        height:42px;
-      }
-
-      .signup_tel_box{
-        img{
-          margin-top:15px;
-          width:40px;
-          height:40px;
-        }
-      }
+      // .signup_tel_box{}
     }
 
     .signup_button{
-      float: right;
-      margin-top: 15px;
-      margin-right:10px;
+      margin-right: 2px;
       input{
-      width:100px;
-      height:50px;
-      outline:none;
-      border:none;
-      background-color:rgb(156, 156, 156);
-      font:20px "나눔고딕",sans-serif;
-      border-radius:15px;
-      cursor: pointer;
-      }
-      input:hover{
-        background-color:$dark-gray;
-        color: #fff;
+        cursor: pointer;
       }
     }
   }// form 
