--- a/src/styles/src/SkinTypeTest.scss
+++ b/src/styles/src/SkinTypeTest.scss
@@ -83,7 +83,9 @@
       }
       form {
         display: flex;
+        width: 100%;
         // background-color: #faf;
+
         div {
           width: auto;
           height: auto;
